files rearranged  and working local Rag implemetd

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+Frontend/node_modules
 /.pnp
 .pnp.js
 /src/Python_src/.env
-/Project_1_env
+/Project_1
 
 # testing
 /coverage
